Compiler/tests/good/if3.nx
function printa() : int
{
    printn(1);
    return 0;
}

if(printa() && printa())
{
    printn(3);
}