Compiler/tests/bad/function13.nx
function somar(x : int, y : int) : int
{
    return 3;
}

print(somar(2));
